MAY 10 - regenerative processes and semi-markov processes
There is a problem to be fixed: everything is in italic I don’t know
why. It shouldn’t be my fault.

--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -305,7 +305,7 @@ A random variable N (integer valued), is called "stopping time" (ST) for the i.i
 \subsection{Discussion on Wald's equation proof}
 	In the equation \ref{wald:proof} we should see if the passage marked with (1) is allowed.
 	If we use $|X_n|>0$, the infinite sum is allowed and it's surely positive and finite, as the expectation of each X is finite.
-	With $X_n$ the sum is bounded by $|X_n|$, which allows the switching for the Lebesque theorem.
+	With $X_n$ the sum is bounded by $|X_n|$, which allows the switching for the Lebesgue theorem.
 
 \subsection{Examples}
 	\begin{enumerate}
@@ -314,3 +314,162 @@ A random variable N (integer valued), is called "stopping time" (ST) for the i.i
 		\item $\prob[X_i=-1]=\prob[X_i = 1] = \frac{1}{2}$ and $N = \min\{n : X_1 + X_2 + \dots + X_N =1\}$ is a \gls{st}, but the expected stop time
 		is $1 = \exp[N] \cdot \exp[X] = 0 \cdot \exp[N] \implies $ ABSURD. We conclude that Wald's equation doesn't apply. So it must be that N has not finite mean $\implies \exp[N]=\infty$
 	\end{enumerate}
+
+\section{Regenerative Processes}
+
+Consider a stochastic process $\{X(t), t \geq 0\}$ with state space$\{0, 1, 2, ... \}$ having
+the property that there exist time points at which the process (probabilistically) restarts itself. That is, suppose that with probability 1, there exists a time $S_1$
+such that the continuation of the process beyond $S_1$ is a probabilistic replica
+of the whole process starting at 0. Note that this property implies the existence
+of further times $S_2 , S_3 , \dots$ having the same property as $S_1$. Such a stochastic
+process is known as a \emph{regenerative process}.
+From the above, it follows that $\{S_1 , S_2 , ...\}$ constitute the event times of
+a renewal process. We say that a cycle is completed every time a renewal
+occurs. Let $N(t) = \max\{n: S_n \leq t\}$ denote the number of cycles by time t.
+
+\section{Semi-Markov Processes}
+A semi-Markov process is one that changes states in accordance with a Markov
+chain but takes a random amount of time between changes. More specifically
+consider a stochastic process with states $0, 1, ...  $, which is such that, whenever
+it enters state $i, i\geq 0$:
+\begin{enumerate}
+	\item The next state is $j$ with probability $P_{ij}$
+	\item Given that the next state is $j$, the time the transition takes is random with distribution $F_{ij}$ and independent of past and future
+\end{enumerate}
+If we let $Z(t)$ denote the state at time $t$, then $\{Z(t), t\leq 0\}$ is called a \emph{semi-Markov
+process}.
+Thus a semi-Markov process does not possess the Markovian property that
+given the present state the future is independent of the past. For in predicting
+the future not only would we want to know the present state, but also the
+length of time that has been spent in that state\footnote{note that ``$Z(t) = \mbox{ state of the process at time } t$" is Markov only in the case where the distribution pdf od the transition time is memoryless (for example exponential), more in general $Z(t)$ is not Markovian.}. Of course, at the moment of transition, all we would need to know is the new state ( and nothing about
+the past). %A Markov chain is a semi-Markov process in which
+
+Let $H_i(t)$ denote the \emph{distribution of time} that the semi-Markov process spends
+in state i before making a transition. That is, by conditioning on the next
+state, we see
+	\begin{equation}
+		H_i(t) = \sum_j P_{ij} F_{ij}(t)
+	\end{equation}
+	
+and let $\mu_i$ denote its mean. That is:
+	\begin{equation}
+		 \mu_i = \exp[H_i(t)] = \int_{0}^{+\infty}x \,dH_i(x)
+	\end{equation}
+
+\begin{definition}[Average return time]
+	$\mu_{ii} = $ average time between two consecutive transition in state $i$
+\end{definition}
+
+\subsection{Regenerative Processes}
+
+Consider a stochastic process $\{X(t), t \geq 0\}$ with state space$\{0, 1, 2, ... \}$ having
+the property that there exist time points at which the process (probabilistically) restarts itself. That is, suppose that with probability 1, there exists a time $S_1$
+such that the continuation of the process beyond $S_1$ is a probabilistic replica
+of the whole process starting at 0. Note that this property implies the existence
+of further times $S_2 , S_3 , \dots$ having the same property as $S_1$. Such a stochastic
+process is known as a \emph{regenerative process}.
+From the above, it follows that $\{S_1 , S_2 , ...\}$ constitute the event times of
+a renewal process. We say that a cycle is completed every time a renewal
+occurs. Let $N(t) = \max\{n: S_n \leq t\}$ denote the number of cycles by time t.
+
+\subsection{Semi-Markov Processes}
+A semi-Markov process is one that changes states in accordance with a Markov
+chain but takes a random amount of time between changes. More specifically
+consider a stochastic process with states $0, 1, ...  $, which is such that, whenever
+it enters state $i, i\geq 0$:
+\begin{enumerate}
+	\item The next state is $j$ with probability $P_{ij}$
+	\item Given that the next state is $j$, the time the transition takes is random with distribution $F_{ij}$ and independent of past and future
+\end{enumerate}
+If we let $Z(t)$ denote the state at time $t$, then $\{Z(t), t\leq 0\}$ is called a \emph{semi-Markov
+	process}.
+Thus a semi-Markov process does not possess the Markovian property that
+given the present state the future is independent of the past. For in predicting
+the future not only would we want to know the present state, but also the
+length of time that has been spent in that state\footnote{note that ``$Z(t) = \mbox{ state of the process at time } t$" is Markov only in the case where the distribution pdf od the transition time is memoryless (for example exponential), more in general $Z(t)$ is not Markovian.}. Of course, at the moment of transition, all we would need to know is the new state ( and nothing about
+the past). %A Markov chain is a semi-Markov process in which
+
+Let $H_i(t)$ denote the \emph{distribution of time} that the semi-Markov process spends
+in state i before making a transition. That is, by conditioning on the next
+state, we see
+\begin{equation}
+H_i(t) = \sum_j P_{ij} F_{ij}(t)
+\end{equation}
+
+and let $\mu_i$ denote its mean. That is:
+\begin{equation}
+\mu_i = \exp[H_i(t)] = \int_{0}^{+\infty}x \,dH_i(x)
+\end{equation}
+
+Let $T_{ii}$ denote the time between successive transitions into state i and let
+\begin{equation}
+\mu_{ii}=\exp [T_{ii}]
+\end{equation}
+By using the theory of alternating renewal processes, it is a
+simple matter to derive an expression for the limiting probabilities of a semi-Markov
+process.
+
+\begin{theorem}
+	If the semi-Markov process is irreducible and if $T_{ii}$ has a non-lattice\footnote{boh} distribution with finite mean, then
+	
+	$$P_j = \lim_{t \to \infty} \prob[Z(t)=j | Z(0)=k]$$
+	
+	Exists and independent of the initial state. Furthermore,
+	
+	$$P_j = \frac{\exp[\mbox{time in state i in a cycle}]}{\exp[\mbox{duration of the cycle}]} = \frac{\mu_i}{\mu_{ii}}$$
+	
+\end{theorem}
+Note that while $\mu_i$ is easy to compute, $\mu_{ii}$ is much more difficult.
+
+\subsection{Renewal-Reward processes}
+
+Let:
+
+\begin{equation}
+r_{ij} = \mbox{reward of transition } i\rightarrow j. \qquad R_{ij} = \exp[r_i]
+\end{equation}
+\begin{equation}
+R_i = \sum_k P_{ik} R_{ik} = \mbox{ average reward of a visit to state } i
+\end{equation}
+$\theta_{ij} = $ total reward of going from i to j for the first time following any path
+\begin{equation}
+\theta_{ij} = \begin{cases} 
+&r_{ij} \quad\mbox{with probability } P_{ij}\\
+&r_{ik}+\theta_{kj}  \quad\mbox{with probability } P_{ik}, k\neq j
+\end{cases}
+\end{equation}
+\begin{equation*}
+\rho_{ij} = \exp[\theta_{ij}] = \sum_{k=0}^{\infty}\exp[\theta_{ij}| X_1=k] P_{ik} = R_{ij}P_{ij} +\sum_{k \neq j} P_{ik} [R_{ik}+\rho_{kj}] = R_i + \sum_{k \neq j}P_{ik}\rho_{kj}
+\end{equation*}
+
+\begin{equation}
+\Rightarrow\rho_{ij} = \exp[\theta_{ij}] =  R_i + \sum_{k \neq j}P_{ik}\rho_{kj}
+\end{equation}
+
+
+We have that:
+\begin{equation*}
+\sum_i \pi_i \rho_{ij} = \sum_i \pi_i R_i + \sum_i \sum_{k \neq j} \pi_i P_{ik} \rho_{kj} = \sum_j \pi_i R_i + \sum_{k \neq j}\rho_{kj}\sum_i\pi_i P_{ik}
+\end{equation*}
+So we have that for \emph{any} metric $r(\cdot)$
+\begin{equation}
+\Rightarrow\sum_i \pi_i \rho_{ij} = \sum_j \pi_i R_i + \sum_{k \neq j}\pi_k\rho_{kj},\qquad \pi_j\rho_{jj} = \sum_i \pi_i R_i
+\end{equation}
+if the metric is \emph{time}
+\begin{equation}
+\pi_j \mu_{jj} = \sum_i \pi_i \mu_i
+\end{equation}
+
+Now, in system modeling one of the main task of performance evaluation is to find te average value of some reward over time, that is to evaluate $\lim_{t \to \infty}\frac{R(t)}{t}$. The following result applies:
+\begin{equation}
+\lim_{t \to \infty}\frac{R(t)}{t} = \frac{\exp[R]}{\exp[X]} = \frac{\rho_{jj}}{\mu_{jj}} = \frac{\sum_i \pi_i \frac{R_i}{\pi_j}}{\sum_i \pi_i \frac{\mu_i}{\pi_j}} = \frac{\sum_i \pi_i \sum_j P_{ik} R_{ik}}{\sum_i \pi_i \sum_k P_{ik}T_{ik}}
+\end{equation}
+
+This is a powerful way to evaluate systems performances, in order for this model to apply 2 conditions need to be met:
+\begin{enumerate}
+	\item The system must be able to be modeled with a concept of \emph{state}.\footnote{That's good for us, every protocol is essentially a state machine}
+	\item The process have to be Markovian or at least semi-Markovian
+\end{enumerate}
+
+	
+
