--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -25,29 +25,6 @@
 
 %\usetikzlibrary{positioning}
 \usetikzlibrary{shapes,arrows}
-%------------------------------ source code
-% \lstset{
-%   basicstyle=\footnotesize\sffamily,
-%   commentstyle=\itshape\color{gray},
-%   captionpos=b,
-%   frame=shadowbox,
-%   language=HTML,
-%   rulesepcolor=\color{DefinedColor},
-%   tabsize=2
-% }
-%%Parte figa per creare i teoremi
-% \newenvironment{theorem}[2][Theorem]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
-% \newenvironment{lemma}[2][Lemma]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
-% \newenvironment{exercise}[2][Exercise]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
-% \newenvironment{reflection}[2][Reflection]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
-% \newenvironment{proposition}[2][Proposition]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
-% \newenvironment{corollary}[2][Corollary]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
 
 %temporary environment definitions
 \newtheorem{theorem}{Theorem}[section]
@@ -71,12 +48,19 @@
 %\usepackage{svg}
 \usepackage{ifluatex}
 \renewcommand{\UrlFont}{\color{black}\small\ttfamily}
-
+% added support for proof parts
+\theoremstyle{remark}
+\newtheorem{proofpart}{Part}
+\renewcommand\theproofpart{\Roman{proofpart}}
+\makeatletter
+\@addtoreset{proofpart}{theorem}
+\makeatother
 \usepackage[colorlinks=true, linkcolor=black, citecolor=black, urlcolor=black]{hyperref} % active ref
 %------------------------------ macros
 \newcommand{\sectionname}{Section} % define Section ref
 \newcommand{\subsectionname}{Sub-section} % define Sub-section ref
 \renewcommand*\arraystretch{1.4} % tables padding
+\newcommand{\N}{\mathbb{N}}
 \DeclareInputText{176}{°}
 
 % Useful Aliases
@@ -103,7 +87,7 @@
 
 \begin{document}
 \frontmatter
- 
+
 \begin{titlepage} %------------------------------ TITLE PAGE
 \begin{center}
 
@@ -150,14 +134,9 @@
   \clearpage
 \endgroup
 \mainmatter
-<<<<<<< HEAD
-\input{introduzione.tex}
-%\input{chapter_2.tex}
-\input{chapter_poisson_processes.tex}
-=======
 \input{introduction.tex}
 \input{chapter_2.tex}
 \input{chapter_PP.tex}
->>>>>>> origin/Poisson-Process
+
 
 \end{document}
